k8s-car-dashboard.yml
---
# Application to deploy
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: car-dashboard
spec:
  replicas: 2 # tells deployment to run 2 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: $APP_NAME
        tier: frontend
    spec:
      imagePullSecrets:
      - name: registry-ng-funfactory
      containers:
      - name: $IMAGE_NAME
        image: $REGISTRY/$REGISTRY_NAMESPACE/$IMAGE_NAME:$TAG
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
          - mountPath: /opt/conversation-service-bind # Mount the "service-bind-volume" volume into the pod.
            name: conversation-service-bind-volume
          - mountPath: /opt/s2t-service-bind # Mount the "service-bind-volume" volume into the pod.
            name: s2t-service-bind-volume
          - mountPath: /opt/t2s-service-bind # Mount the "service-bind-volume" volume into the pod.
            name: t2s-service-bind-volume
      volumes:
        - name: conversation-service-bind-volume
          secret:
            defaultMode: 420
            secretName: binding-my-conversation-service
        - name: s2t-service-bind-volume
          secret:
            defaultMode: 420
            secretName: binding-speech-to-text-service
        - name: t2s-service-bind-volume
          secret:
            defaultMode: 420
            secretName: binding-text-to-speech-service
