k8s-car-dashboard-loadbalancer.yml
# Service to expose frontend via nodeport
apiVersion: v1
kind: Service
metadata:
  name: car-dashboard
  labels:
    app: car-dashboard
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 3000 # Internal Port
    protocol: TCP
  selector:
    app: car-dashboard
    tier: frontend
